--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "name": "@ldapjs/filter",
   "homepage": "https://github.com/ldapjs/filter",
   "description": "API for handling LDAP-style filters",
-  "version": "2.1.1",
+  "version": "2.1.1-patched",
   "license": "MIT",
   "repository": {
     "type": "git",
